# cortex

./: .gitignore  README.md  mypy.ini  pyproject.toml
cortex/: __init__.py  api.py  app.py  cli.py  db.py  logging.py  mlflow_local.py  remote_worker.py  resource_guard.py  runbooks.py  runtime_targets.py  ssh_runtime.py  ssh_transport.py  storage.py
cortex/executors/: __init__.py  base.py  builtins.py  capability_loader.py  external.py  provenance.py  registry.py
deploy/: Dockerfile  docker-compose.yml  mlflow.Dockerfile
docs/: ml-platform-design.md
docs/design/: 1-project-dataset-catalog.md  10-experiment-result-comparison.md  11-external-executor-artifact-contract.md  14-generic-sequence-forecasting.md  2-mstl.md  22-dataset-version-management.md  3-lstm.md  4-plugin-executors.md  5-builtin-executor-migration.md  6-executor-provenance.md  7-ai-capability-executors.md  9-batch-import-prediction-results.md  phase-1-detailed-design.md
docs/runbooks/: 14-guangyuan-reproduction.md
scripts/: verify_guangyuan_smoke.py
tests/: test_dataset_version_management.py  test_error_handling.py  test_executor_registry.py  test_phase1_stories.py  test_resource_guard.py  test_runbook_docs.py  test_runbooks.py  test_ssh_runtime.py  test_web_app_js.py
web/: app.js  index.html  styles.css
