[project]
name = "cortex"
version = "0.1.0"
description = "Phase 1 minimal ML platform prototype"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.22",
  "pandas>=2.0",
  "statsmodels>=0.14",
]

[project.scripts]
cortex = "cortex.cli:main"
cortex-api = "cortex.api:main"

[tool.setuptools]
packages = ["cortex"]
